hyt-testing-service.yml
apiVersion: v1

kind: Service

metadata:
  name: httpd-service
  namespace: web

spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 9090
      protocol: TCP
  selector:
    app: httpd-web
